--- a/frontend/formacao-html-e-css/html5-css3-primeiros-passos/index.html
+++ b/frontend/formacao-html-e-css/html5-css3-primeiros-passos/index.html
@@ -7,15 +7,29 @@
   </head>
 
   <body>
+    <header>
+        <h1 class="main-header">Barbearia Alura</h1>
+    </header>
     <img id="banner" src="banner.jpg">
+    <div class="principal">
+      <h2 class="text-is-centered">Sobre a Barbearia Alura</h2>
+      <p class="text-is-centered">Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barberia Alura
+      já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-    <h1>Sobre a Barbearia Alura</h1>
+      <p class="text-is-centered" id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
 
-    <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barberia Alura
-    já é destaque na cidade e conquista novos clientes a cada dia.</p>
+      <p class="text-is-centered">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nosso clientes</p>
+    </div>
 
-    <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
-
-    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nosso clientes</p>
+    <div class="beneficios">
+      <h3 class="text-is-centered">Benefícios</h3>
+      <ul class="unordered-style">
+        <li class="itens">Atendimento aos clientes</li>
+        <li class="itens">Espaço diferenciado</li>
+        <li class="itens">Profissionais qualificados</li>
+        <li class="itens">Localização</li>
+      </ul>
+      <img class="imagem-beneficios" src="beneficios.jpg">
+    </div>
   </body>
 </html>
