challenge complete. Finished footer and nav at landing page

--- a/frontend/formacao-html-e-css/html5-css3-primeiros-passos/index.html
+++ b/frontend/formacao-html-e-css/html5-css3-primeiros-passos/index.html
@@ -3,13 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>Barbearia Alura</title>
-    <link rel="stylesheet" href="style.css"
+
+    <link rel="stylesheet" href="../html5-css3-posicionamento-listas-navegacao/reset.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <header>
-        <h1 class="main-header">Barbearia Alura</h1>
+        <div class="header-box">
+          <!-- <h1 class="main-header">Barbearia Alura</h1> -->
+          <h1>
+            <img src="../html5-css3-posicionamento-listas-navegacao/logo.png">
+          </h1>
+
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="../html5-css3-posicionamento-listas-navegacao/produtos.html">Produtos</a></li>
+              <li><a href="#">Contato</a></li>
+            </ul>
+          </nav>
+        </div>
     </header>
+
     <img id="banner" src="banner.jpg">
     <div class="principal">
       <h2 class="text-is-centered">Sobre a Barbearia Alura</h2>
@@ -31,5 +47,10 @@
       </ul>
       <img class="imagem-beneficios" src="beneficios.jpg">
     </div>
+
+    <footer>
+      <img src="../html5-css3-posicionamento-listas-navegacao/logo-branco.png" alt="Barbearia Alura Branding">
+      <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+    </footer>
   </body>
 </html>
