fixed navbar anchors through the pages

--- a/frontend/formacao-html-e-css/html5-css3-primeiros-passos/index.html
+++ b/frontend/formacao-html-e-css/html5-css3-primeiros-passos/index.html
@@ -20,7 +20,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="../html5-css3-posicionamento-listas-navegacao/produtos.html">Produtos</a></li>
-              <li><a href="#">Contato</a></li>
+              <li><a href="../html5-css3-formularios-tabelas/contato.html">Contato</a></li>
             </ul>
           </nav>
         </div>
