--- a/frontend/formacao-html-e-css/html5-css3-posicionamento-listas-navegacao/produtos.html
+++ b/frontend/formacao-html-e-css/html5-css3-posicionamento-listas-navegacao/produtos.html
@@ -16,7 +16,7 @@
           <ul class="navigation">
             <li><a href="../html5-css3-primeiros-passos/index.html" title="Voltar">Home</a></li>
             <li><a href="produtos.html">Produtos</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a href="../html5-css3-formularios-tabelas/contato.html">Contato</a></li>
           </ul>
         </nav>
       </div>
